--- a/index.html
+++ b/index.html
@@ -1,4 +1,39 @@
-<html>
-<head></head>
-<body>Labas pasauli</body>
+<html lang="lt">
+<head>
+    <meta charset="UTF-8"/>
+    <title>Mano puslapis</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="CSS/dizainas.css">
+    <link rel="stylesheet" href="CSS/elementai.css">
+    <link rel="stylesheet" href="CSS/layout.css">
+</head>
+<body>
+
+<header>
+    <img src="/img/logo.png" alt="logo">
+    <nav>
+        <a onclick="pakeistiPuslapi('about')">Apie</a>
+        <a onclick="pakeistiPuslapi('portfolio')">Portfolio</a>
+        <a onclick="pakeistiPuslapi('contacts')">Kontaktai</a>
+    </nav>
+</header>
+<aside>
+    <section class="amalker">
+        <h4>Reklama:</h4>
+        <img src="https://picsum.photos/240/300" alt="Reklama">
+    </section>
+</aside>
+<main>
+    <section id="about">Apie mane</section>
+    <section id="portfolio">Portfolio</section>
+    <section id="contacts">Kontaktai</section>
+</main>
+<footer>
+    <span>
+        Visos teisės saugomos 2020&copy;
+    </span>
+</footer>
+<script src="JS/navigacija.js"></script>
+
+</body>
 </html>
